--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: yourname@example.com</p>
+    <p>Email: swastikdas539@gmail.com</p>
+    <p>Email: <a href="mailto:swastikdas539@gmail.com">swastikdas539@gmail.com</a></p>
   </section>
 
   <footer>
